--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -4,5 +4,21 @@
     <string name="favorite_removed">Favorite Removed</string>
     <string name="added_to_favorite">Added to Favorite</string>
     <string name="setting">Setting</string>
+    <string name="setting_text">Setting</string>
+    <string name="movie_title">Judul Film</string>
+    <string name="tools_rating">7.6</string>
+    <string name="sinopsis">Sinopsis Film</string>
+    <string name="genre">Genre</string>
+    <string name="poster_film">Poster Film</string>
+    <string name="error_loading_data">Failed to load data. Please try again later.</string>
+    <string name="movie_poster">Movie Poster</string>
+    <string name="review">Review</string>
+    <string name="slash">/</string>
+    <string name="tambah_ke_favorit">Tambah ke favorit</string>
+    <string name="favorite_movie">Favorite Movie</string>
+    <string name="gagal_memuat_data_silakan_coba_kembali">Gagal memuat data, silakan coba kembali</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="title_favorite">Favorite</string>
+    <string name="oops_something_went_wrong">Oops.. Something went wrong!</string>
 
 </resources>
