--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -20,5 +20,5 @@
     <string name="dark_mode">Dark Mode</string>
     <string name="title_favorite">Favorite</string>
     <string name="oops_something_went_wrong">Oops.. Something went wrong!</string>
-
+    <string name="title_core">Title Core</string>
 </resources>
